--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ main {
   grid-template-columns: 1fr;
 }
 
-footer {
+The footer element has the bar down the bottom footer {
   background-color: var(--dark-purple);
   display: flex;
   align-items: center;
@@ -33,6 +33,17 @@ footer {
 
 .get-started-footer {
   color: white;
+}
+
+#get-started-button {
+  width: 167px;
+  height: 56px;
+  border-radius: 50px;
+  border-style: none;
+  background-image: var(--red-to-pink);
+  color: white;
+  font-family: "Plus Jakarta Sans", Arial, Helvetica, sans-serif;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=style.css.map */
