--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import './node_modules/modernize/modernize.css';
-@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800;900&display=swap");
 :root {
   --purple: rgb(102, 108, 163);
-  --dark-purple: rgb(19, 24, 63);
+  --dark-purple: #13183f;
   --grey: rgb(131, 134, 154);
   --pink: rgb(247, 71, 128);
   --light-pink: rgb(255, 167, 195);
@@ -15,7 +15,6 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  min-width: 100vh;
   background-image: var(--body-gradient);
 }
 
@@ -24,15 +23,24 @@ main {
   grid-template-columns: 1fr;
 }
 
-The footer element has the bar down the bottom footer {
+footer {
   background-color: var(--dark-purple);
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 120px;
 }
 
 .get-started-footer {
   color: white;
+}
+
+.heading-xl {
+  font-family: "Plus Jakarta Sans";
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: var(--dark-purple);
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 #get-started-button {
