--- a/css/input.scss
+++ b/css/input.scss
@@ -27,7 +27,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  // max-width: 60vw;
+  max-width: 100vw;
   background-image: var(--body-gradient);
 }
 
@@ -35,6 +35,7 @@ body {
 main {
   display: grid;
   grid-template-columns: 1fr;
+  max-width: 100vw;
 }
 
 // The footer element has the bar down the bottom
