--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,14 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  max-width: 100vw;
   background-image: var(--body-gradient);
 }
 
 main {
   display: grid;
   grid-template-columns: 1fr;
+  max-width: 100vw;
 }
 
 footer {
