--- a/css/input.scss
+++ b/css/input.scss
@@ -33,6 +33,7 @@ body {
 
 // The main element holds all the cards
 main {
+  // BUG - setting the display to 'grid' makes the content overflow, but only when checking on the inspector developer tools
   display: grid;
   grid-template-columns: 1fr;
   max-width: 100vw;
