--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,12 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  max-width: 100vw;
   background-image: var(--body-gradient);
 }
 
 main {
   display: grid;
   grid-template-columns: 1fr;
-  max-width: 100vw;
 }
 
 footer {
@@ -55,6 +53,10 @@ footer {
   color: white;
   font-family: "Plus Jakarta Sans", Arial, Helvetica, sans-serif;
   font-weight: 700;
+}
+
+#hero-img {
+  align-self: center;
 }
 
 /*# sourceMappingURL=style.css.map */
