added reset.css and implemented

--- a/css/input.scss
+++ b/css/input.scss
@@ -1,22 +1,25 @@
 // Import fonts
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800;900&display=swap');
 
+// Import CSS reset
+@import './reset.css';
+
 // Add in sass breakpoints
 $breakpoint-small: 375px;
 $breakpoint-medium: 768px;
 $breakpoint-large: 1440px;
 
 // Set the brand colours as css variables
-// :root {
-//   --purple: rgb(102, 108, 163);
-//   --dark-purple: #13183f;
-//   --grey: rgb(131, 134, 154);
-//   --pink: rgb(247, 71, 128);
-//   --light-pink: rgb(255, 167, 195);
-//   --red-to-pink: linear-gradient(rgb(240, 42, 166), rgb(255, 111, 72));
-//   --blue-to-purple: linear-gradient(rgb(72, 81, 255), rgb(240, 42, 166));
-//   --body-gradient: linear-gradient(#ffffff, #f0f1ff);
-// }
+:root {
+  --purple: rgb(102, 108, 163);
+  --dark-purple: #13183f;
+  --grey: rgb(131, 134, 154);
+  --pink: rgb(247, 71, 128);
+  --light-pink: rgb(255, 167, 195);
+  --red-to-pink: linear-gradient(rgb(240, 42, 166), rgb(255, 111, 72));
+  --blue-to-purple: linear-gradient(rgb(72, 81, 255), rgb(240, 42, 166));
+  --body-gradient: linear-gradient(#ffffff, #f0f1ff);
+}
 
 // Define styles for elements
 // Body holds all elements on the page
