--- a/css/reset.css
+++ b/css/reset.css
@@ -6,16 +6,7 @@
 }
 
 /* Remove default margin */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
+* {
     margin: 0;
 }
 
@@ -30,11 +21,30 @@ html:focus-within {
     scroll-behavior: smooth;
 }
 
+
+html {
+    height: 100%;
+}
+
 /* Set core body defaults */
 body {
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+}
+
+/*
+  8. Avoid text overflows
+*/
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    overflow-wrap: break-word;
 }
 
 /* A elements that don't have a class get default styles */
@@ -44,9 +54,12 @@ a:not([class]) {
 
 /* Make images easier to work with */
 img,
-picture {
-    max-width: 100%;
+picture,
+video,
+canvas,
+svg {
     display: block;
+    max-width: 100%;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -71,4 +84,9 @@ select {
         transition-duration: 0.01ms !important;
         scroll-behavior: auto !important;
     }
+}
+
+#root,
+#__next {
+    isolation: isolate;
 }
