fixed background colours and screen width issues

--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,14 @@
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   background-image: var(--body-gradient);
+  background-attachment: fixed;
 }
 
 main {
   display: grid;
   grid-template-columns: 1fr;
+  padding: 1.5rem;
 }
 
 footer {
@@ -30,6 +31,20 @@ footer {
   justify-content: space-between;
   height: 120px;
   min-width: 100vw;
+}
+
+.card {
+  border-style: solid;
+  border-width: 3px;
+  border-color: red;
+  padding-top: 4rem;
+}
+
+.card img {
+  border-style: solid;
+  border-width: 3px;
+  border-color: red;
+  translate: 0% -50%;
 }
 
 .get-started-footer {
